# rxgraph

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml
benches/: __init__.py  flight_routes.rs  main.py  memory_rss.py  scenarios.py
crates/rxgraph/: Cargo.toml  README.md
crates/rxgraph-py/: Cargo.toml
crates/rxgraph-py/src/: lib.rs
crates/rxgraph-python/: Cargo.toml
crates/rxgraph-python/src/: lib.rs
crates/rxgraph/benches/: flight_routes.rs  memory.rs  payment_risk.rs  petgraph_search.rs  petgraph_topology.rs
crates/rxgraph/examples/: flight_routes.rs  native_row_lazy.rs
crates/rxgraph/src/: algorithms.rs  arrow.rs  dsl.rs  graph.rs  lib.rs  python.rs  traversal.rs
crates/rxgraph/src/dsl/: arrow_value.rs  bind.rs  eval.rs  expr.rs  mod.rs  polars_json.rs  value.rs
crates/rxgraph/src/dsl/compiled/: fast.rs  mod.rs
crates/rxgraph/src/dsl/ops/: list.rs  mod.rs  scalar.rs  string.rs  struct_.rs
crates/rxgraph/src/examples/: kernels.rs  mod.rs
crates/rxgraph/src/graph/: csr.rs  graph.rs  mod.rs  repo.rs
crates/rxgraph/src/traversal/: algo.rs  config.rs  engine.rs  kernel.rs  mod.rs  native.rs  progress.rs  registry.rs  rust_api.rs  typed.rs
crates/rxgraph/tests/: rust_kernel.rs
examples/: flight_routes.rs  nyc_taxi_zone_search.py
examples/rust-kernel-plugin/: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
examples/rust-kernel-plugin/python/rxgraph_hop_budget/: __init__.py
examples/rust-kernel-plugin/src/: lib.rs
plans/: go-port.md
python/rxgraph/: __init__.py  __init__.pyi  _graph_tables.py  plugin.py
scripts/: bench_python.py
src/: dsl.rs  graph.rs  lib.rs  test_utils.rs  traversal.rs
src/bindings/: mod.rs  utils.rs
src/graph/: mod.rs  traversal.rs
tests/: test_algorithm_libraries.py  test_algorithms.py  test_digraph.py  test_doctests.py  test_from_lazy.py  test_from_parquet.py  test_import.py  test_kernel.py  test_named_kernel.py  test_object_api.py  test_rust_kernel_plugin_example.py  test_traversal_kernel.py
