[workspace]
members = ["crates/rxgraph", "crates/rxgraph-python"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/guywaldman/rxgraph"

[workspace.dependencies]
anyhow = "~1.0.102"
arrow = "~58.3.0"
criterion = { version = "~0.8.2", features = ["html_reports"] }
pyo3 = "~0.28.3"
pyo3-arrow = "~0.17.0"
rand = "~0.10.1"
rayon = "~1.12.0"
rxgraph = { path = "crates/rxgraph" }
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
sprs = "~0.11.4"
stats_alloc = "~0.1.10"

[profile.profiling]
inherits = "release"
debug = true
strip = false
