[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "rxgraph"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["polars>=1.8.2"]

[tool.maturin]
python-source = "python"

[tool.ruff.lint]
ignore = [
    "E731", # Do not assign a `lambda` expression, use a `def`
]
