[package]
name = "rxgraph-py"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
description = "Reusable PyO3 bindings for rxgraph; link this with your own kernel to build a custom rxgraph extension"
license = "MIT"
repository.workspace = true

[lib]
name = "rxgraph_py"
crate-type = ["rlib"]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
# NOTE: `extension-module` is intentionally NOT enabled here. The final
# extension crate (cdylib) enables it; this rlib must stay linkable/testable.
pyo3.workspace = true
pyo3-arrow.workspace = true
rayon.workspace = true
rxgraph.workspace = true
serde_json.workspace = true
