[package]
name = "rxgraph-python"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "_rxgraph"
crate-type = ["cdylib"]

[features]
default = []
kernel-plugin-example = ["dep:rxgraph-kernel-example"]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-arrow.workspace = true
rayon.workspace = true
rxgraph.workspace = true
rxgraph-kernel-example = { path = "../../examples/rust-kernel-plugin", optional = true }
serde_json.workspace = true
