[package]
name = "rxgraph"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "High-performance graph traversal engine"
license = "MIT"
repository.workspace = true
readme = "README.md"
keywords = ["arrow", "graph", "traversal", "polars"]
categories = ["algorithms", "data-structures"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
    "examples/**/*.rs",
    "benches/**/*.rs",
]

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
sprs.workspace = true
stats_alloc.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "payment_risk"
harness = false

[[bench]]
name = "flight_routes"
harness = false

[[bench]]
name = "memory"
harness = false
