[package]
name = "rxgraph-hop-budget"
version = "0.1.0"
edition = "2024"
publish = false
description = "Example downstream rxgraph extension exposing a native kernel"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.28", features = ["extension-module"] }
rxgraph = { path = "../../crates/rxgraph" }
rxgraph-py = { path = "../../crates/rxgraph-py" }
serde_json = "1"

[dev-dependencies]
# Only needed by the tests, to build small graphs with the `record_batch!` macro
# (which also expands to reference `arrow_schema`).
arrow = "58"
arrow-schema = "58"
